[project]
name = "data-extract-env"
version = "1.0.0"
description = "Structured data extraction environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "requests>=2.31",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
